build: set working_dir in latex build action

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,7 +16,8 @@ jobs:
     - name: Compile LaTeX document
       uses: xu-cheng/latex-action@v3
       with:
-        root_file: src/main.tex
+        working_directory: src
+        root_file: main.tex
 
     - name: Check for LaTeX errors and warnings
       run: |
